--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,11 @@
 
   <body>
     <%= yield %>
+
+    <% flash.each do |name, msg| %>
+      <ul>
+       <li><%= msg %></li>
+      </ul>
+  <% end %>
   </body>
 </html>
